--- a/src/components/estilos.css
+++ b/src/components/estilos.css
@@ -66,9 +66,19 @@ font-size: 40px;
 }
 .boxItem{
   border: 1px solid red;
-  width: 200px;
-  margin-left: 500px;
+  width: 250px;
+  
+
 }
 .fotProduct{
   height: 150px;
+}
+.boxProductos{
+  display: flex;
+  flex-direction: row;
+}
+.boxDetalle{
+  border: 1px solid rgb(25, 0, 255);
+  width: 250px;
+  justify-content: initial;
 }
