--- a/src/css/App.css
+++ b/src/css/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  height: 1000px;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
