--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -65,11 +65,23 @@ nav{
   background-color: darkcyan;
 }
 .carticon{
- color:darkred;
-font-size: 40px;
-margin-top: 20px;
+ color:rgb(14, 13, 13);
+font-size: 50px;
+margin-top: 13px;
 }
-
+.cantItems{
+  position: fixed;
+  font-size: 20px;
+  color: white;
+  font-weight: bold;
+  margin-left:39px;
+  margin-top: -25px;
+  border-radius: 500px;
+  background-color: red;
+}
+.boxCarrito{
+  height: 45px;
+}
 .boxContador{
   display: flex;
   flex-direction: column;
@@ -127,4 +139,14 @@ margin-top: 20px;
   color: rgb(248, 238, 238);
   font-size: 30px;
   text-decoration:underline;
+}
+.boxCarrito{
+  display: flex;
+  flex-direction: rom;
+  justify-content:space-around;
+  margin: 10px;
+  width: 500px;
+  font-size: 20px;
+  font-weight: bold;
+  color: blueviolet;
 }
