--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -3,7 +3,7 @@ padding: 0;}
 .cajaGigante {
   height: 1000px;
   font-size: 30px;
-
+text-align: center;
 }
 
 .body{
@@ -70,7 +70,6 @@ font-size: 50px;
 margin-top: 13px;
 }
 .cantItems{
-  position: fixed;
   font-size: 20px;
   color: white;
   font-weight: bold;
@@ -97,15 +96,24 @@ margin-top: 13px;
 .botContar{
   height: 30px;
     background-color: black;
-    font-size: 18px;
-    padding: 5px;
+    font-size: 22px;
+    padding-left:  5px;
+    padding-right:  5px;
     border: 2px solid black;
     border-radius: 10px;
     color: darkturquoise;
     margin-left: 20px;
     margin-right: 20px;
 }
+.botAgregar{
+  height: 30px;
+  width: 445px;
+  background-color: rgb(109, 107, 107);
+  font-size: 20px;
 
+  
+  color: blanchedalmond;
+}
 .fotProduct{
   height: 150px;
 }
@@ -123,7 +131,8 @@ margin-top: 13px;
   text-align: center;
   width: 20%;
   height: 30%;
-  padding: 10px;
+  padding-right: 10px;
+  padding-left: 10px;
   font-size: 15px;
 }
 .boxDetalle{
@@ -149,4 +158,19 @@ margin-top: 13px;
   font-size: 20px;
   font-weight: bold;
   color: blueviolet;
+}
+.padreCarrito{
+    text-align: right;
+    width: 500px;
+    display: inline-block;
+}
+.botonCarrito{
+  margin-top: 20px;
+  height: 50px;
+  background-color: black;
+  font-size: 20px;
+  padding: 5px;
+  border: 2px solid black;
+  border-radius: 10px;
+  color: blanchedalmond;
 }
