--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -174,3 +174,14 @@ margin-top: 13px;
   border-radius: 10px;
   color: blanchedalmond;
 }
+
+.formulario{
+  
+  width: 500px;
+  display: inline-block;
+}
+.cajaFinal{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
