--- a/src/css/estilos.css
+++ b/src/css/estilos.css
@@ -7,7 +7,7 @@ text-align: center;
 }
 
 .body{
-  background-color: #282c34;
+  background-color: #22252b;
   color: aliceblue;
   align-items: center;
   justify-content: center;
@@ -29,7 +29,7 @@ text-align: center;
   h1{
     text-align: center;
     font-size: 45px;
-    color: rgb(212, 179, 171);
+    color: rgb(224, 63, 51);
     font-family:cursive;
     font-kerning: initial;
   }
@@ -62,7 +62,7 @@ text-align: center;
 
 }
 nav{
-  background-color: darkcyan;
+  background-color: rgb(68, 160, 160);
 }
 .carticon{
  color:rgb(14, 13, 13);
@@ -92,6 +92,11 @@ margin-top: 13px;
   height: 60px;
   border: 1px solid rgb(28, 70, 83);
 }
+.boxBarrContar{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
 
 .botContar{
   height: 30px;
@@ -115,6 +120,7 @@ margin-top: 13px;
   color: blanchedalmond;
 }
 .fotProduct{
+  
   height: 150px;
 }
 .boxProductos{
@@ -130,7 +136,7 @@ margin-top: 13px;
   border: 1px solid red;
   text-align: center;
   width: 20%;
-  height: 30%;
+  height: 60%;
   padding-right: 10px;
   padding-left: 10px;
   font-size: 15px;
@@ -154,16 +160,16 @@ margin-top: 13px;
   flex-direction: rom;
   justify-content:space-around;
   margin: 10px;
-  width: 500px;
-  font-size: 20px;
+  width: 100%;
+  font-size: 15px;
   font-weight: bold;
   color: blueviolet;
   
 }
 .padreCarrito{
-    text-align: right;
-    width: 500px;
-    display: inline-block;
+    text-align: center;
+    width: 50%;
+    
 }
 .botonCarrito{
   margin-top: 20px;
@@ -177,21 +183,20 @@ margin-top: 13px;
 }
 
 .formulario{
-  
-  width: 500px;
   display: inline-block;
 }
 .cajaFinal{
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  width: 100%;
 }
 .comprar{
   
   margin-left: auto;
   margin-right: auto;
   font-size: 20px;
-  color: rgb(16, 16, 19);
+  color: rgb(99, 9, 61);
 }
 .imagCarrito{
   width: 50px;
@@ -199,13 +204,13 @@ margin-top: 13px;
 
 .boxCarrito2{
   display: flex;
-  justify-content:space-evenly;
+  justify-content:space-between;
   font-size: 20px;
   text-align: center;
   border: 3px solid rgb(5, 6, 10);
   margin-right: auto;
   margin-right: auto;
- 
+
   width: 500px;
   align-content: center;
   align-items: center;
@@ -231,7 +236,13 @@ margin-top: 13px;
   margin-left: -100px;
   margin-top: 420px;  
   
-  
-  
+}
+.parrafo{
+  font-size: 20px;
+ 
+  color: blanchedalmond;
 }
 
+.cajita{
+  width:25%;
+}
